2007-01-18  Martin Leidig  <mleidig@schlund.de>

	Added classhinting support to the JSON protocol. Classhinting can 
	be enabled/disabled within the webservice configuration file using
	the json element with the boolean classhinting attribute (globally
	or service specific). By default classhinting is disabled.

	* src/de/schlund/pfixcore/webservice/jsonws/JSONSerializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/Bean.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java
	* src/de/schlund/pfixcore/webservice/config/ServiceConfig.java
	* src/de/schlund/pfixcore/webservice/config/GlobalServiceConfig.java
	* src/de/schlund/pfixcore/webservice/config/ConfigurationReader.java
	* projects/core/schema/wsconfig200401.xsd

2007-01-18  Martin Leidig  <mleidig@schlund.de>

	Added support for java.util.Date to JSON webservices. It's
	recommended to use java.util.Calendar instead, Date is only 
	supported for backwards compatibility (besides the SOAP services,
	resp. AXIS, don't support arrays of Dates, but work with
	Calendar arrays).

	* src/de/schlund/pfixcore/example/webservices/TypeTest.java
	* src/de/schlund/pfixcore/example/webservices/TypeTestImpl.java
	* src/de/schlund/pfixcore/webservice/jsonws/SerializerRegistry.java
	* src/de/schlund/pfixcore/webservice/jsonws/BeanDescriptor.java
	* src/de/schlund/pfixcore/webservice/jsonws/DeserializerRegistry.java
	* src/de/schlund/pfixcore/webservice/jsonws/serializers/BeanSerializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/serializers/CalendarSerializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java
	* src/de/schlund/pfixcore/webservice/jsonws/deserializers/CalendarDeserializer.java
	* projects/webservice/htdocs/typetest-pfxsoap.js
	* projects/webservice/conf/webservice.conf.xml

2007-01-17  Martin Leidig  <mleidig@schlund.de>

	Added support for customizable Javascript namespaces to autogenerated
	webservice stubs (supported are custom prefixes, java-package-like