@@ -38,11 +38,13 @@ public class ServletInfoRule extends CheckedRule {
             throw new Exception("Mandatory attribute \"name\" is missing!");
         }
         config.setServletName(servletName);
-        String dependFile = attributes.getValue("depend");
-        if (dependFile == null) {
-            throw new Exception("Mandatory attribute \"depend\" is missing!");
+        if (config instanceof ContextXMLServletConfig) {
+            String dependFile = attributes.getValue("depend");
+            if (dependFile == null) {
+                throw new Exception("Mandatory attribute \"depend\" is missing!");
+            }
+            config.setDependFile(dependFile);
         }
-        config.setDependFile(dependFile);
         this.getDigester().push(config);
     }
     
@@ -53,7 +55,11 @@ public class ServletInfoRule extends CheckedRule {
     protected Map<String, Boolean> wantsAttributes() {
         HashMap<String, Boolean> atts = new HashMap<String, Boolean>();
         atts.put("name", true);
-        atts.put("depend", true);
+        if (config instanceof ContextXMLServletConfig) {
+            atts.put("depend", true);
+        } else {
+            atts.put("depend", false);
+        }
         return atts;
     }
 }
